fix heading layout on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -175,7 +175,14 @@ html, body {
         font-size: 2rem;
         white-space: normal;
         text-align: center;
+    }
 
+    .centerH1 {
+        font-size: 1.5rem;
+    }
+
+    .centerLogo {
+        max-width: 100px;
     }
 
     .h2 {
